# TicTacToe

./: CMakeLists.txt  Readme.md
include/aimove/: DifficultyLevel.h  EvaluationFunction.h  MiniMax.h  ScoreDifferenceEvaluationFunction.h  SearchResult.h  SimpleSearcher.h
include/controller/: GameController.h
include/core/: AIPlayer.h  BoardSquare.h  BoardSquareState.h  BoardStats.h  GameBoard.h  GameConstants.h  HumanPlayer.h  Move.h  Player.h  RandomHumanPlayer.h
src/aimove/: MiniMax.cpp  ScoreDifferenceEvaluationFunction.cpp
src/controller/: GameController.cpp
src/core/: AIPlayer.cpp  BoardSquareState.cpp  GameBoard.cpp  HumanPlayer.cpp  Player.cpp  RandomHumanPlayer.cpp
src/main/: Main.cpp
src/test/: Test.cpp
